addded blog category feature